syntax = "proto3";

package registry.v1;

import "buf/validate/validate.proto";

// ── Object messages ─────────────────────────────────────────────────

message ObjectMeta {
  string id = 1;
  string api_name = 2;
  string title = 3;
  string plural_title = 4;
  string description = 5;
  bool is_standard = 6;
  string storage_schema = 7;
  string storage_table = 8;
  bool supports_custom_fields = 9;
  string category_id = 10;
  repeated FieldMeta fields = 11;
  string created_at = 12;
  string updated_at = 13;
}

message FieldMeta {
  string id = 1;
  string object_id = 2;
  string api_name = 3;
  string title = 4;
  string description = 5;
  string type = 6;
  string type_config = 7; // JSON string
  bool is_required = 8;
  bool is_unique = 9;
  bool is_standard = 10;
  string storage_column = 11;
  string lookup_object_id = 12;
  string created_at = 13;
  string updated_at = 14;
}

// ── Object CRUDL ────────────────────────────────────────────────────

message ListObjectsRequest {}

message ListObjectsResponse {
  repeated ObjectMeta objects = 1;
}

message GetObjectRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetObjectResponse {
  ObjectMeta object = 1;
}

message CreateObjectRequest {
  string api_name = 1 [(buf.validate.field).string.min_len = 1];
  string title = 2 [(buf.validate.field).string.min_len = 1];
  string plural_title = 3 [(buf.validate.field).string.min_len = 1];
  string description = 4;
  string category_id = 5;
  bool supports_custom_fields = 6;
}

message CreateObjectResponse {
  ObjectMeta object = 1;
}

message UpdateObjectRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2;
  string plural_title = 3;
  string description = 4;
  string category_id = 5;
  bool supports_custom_fields = 6;
}

message UpdateObjectResponse {
  ObjectMeta object = 1;
}

message DeleteObjectRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteObjectResponse {}

// ── Field CRUDL ─────────────────────────────────────────────────────

message ListFieldsRequest {
  string object_id = 1 [(buf.validate.field).string.uuid = true];
}

message ListFieldsResponse {
  repeated FieldMeta fields = 1;
}

message GetFieldRequest {
  string object_id = 1 [(buf.validate.field).string.uuid = true];
  string id = 2 [(buf.validate.field).string.uuid = true];
}

message GetFieldResponse {
  FieldMeta field = 1;
}

message CreateFieldRequest {
  string object_id = 1 [(buf.validate.field).string.uuid = true];
  string api_name = 2 [(buf.validate.field).string.min_len = 1];
  string title = 3 [(buf.validate.field).string.min_len = 1];
  string description = 4;
  string type = 5 [(buf.validate.field).string.min_len = 1];
  string type_config = 6; // JSON string
  bool is_required = 7;
  bool is_unique = 8;
  string lookup_object_id = 9;
}

message CreateFieldResponse {
  FieldMeta field = 1;
}

message UpdateFieldRequest {
  string object_id = 1 [(buf.validate.field).string.uuid = true];
  string id = 2 [(buf.validate.field).string.uuid = true];
  string title = 3;
  string description = 4;
  string type_config = 5; // JSON string
  bool is_required = 6;
  bool is_unique = 7;
}

message UpdateFieldResponse {
  FieldMeta field = 1;
}

message DeleteFieldRequest {
  string object_id = 1 [(buf.validate.field).string.uuid = true];
  string id = 2 [(buf.validate.field).string.uuid = true];
}

message DeleteFieldResponse {}
