syntax = "proto3";

package registry.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";

message ListRequest {
  // The API name of the object (e.g. "employees", "departments").
  string object_name = 1 [(buf.validate.field).string.min_len = 1];
  // Comma-separated field names to include in the response.
  string select = 2;
  // Comma-separated lookup fields to expand (e.g. "Department,Department.Company").
  string expand = 3;
  // Sort field, optionally suffixed with ".desc" (e.g. "CreatedAt.desc").
  string order = 4;
  // Page size (0-200, 0 means server default).
  int32 limit = 5 [(buf.validate.field).int32 = {
    gte: 0
    lte: 200
  }];
  // Opaque cursor token from a previous response.
  string cursor = 6;
  // Filters keyed by field API name, values in "op.value" format (e.g. "eq.active").
  map<string, string> filters = 7;
}

message ListResponse {
  int64 total_count = 1;
  optional string next_cursor = 2;
  repeated google.protobuf.Struct results = 3;
}

message GetRequest {
  // The API name of the object.
  string object_name = 1 [(buf.validate.field).string.min_len = 1];
  // UUID of the record.
  string id = 2 [(buf.validate.field).string.uuid = true];
  // Comma-separated field names to include.
  string select = 3;
  // Comma-separated lookup fields to expand.
  string expand = 4;
}

message GetResponse {
  google.protobuf.Struct record = 1;
}
